test/corpus/annotations.txt
==================
Basic type annotation (unit/AnnotationA.dhall)
==================

x : T

---

(expression
  (primitive_expression (identifier (label)))
  (type_operator)
  type: (expression
    (primitive_expression (identifier (label)))))

==================
Nested type annotations (annotationsA.dhall)
==================

([] : List Natural) # [ 1, 2, 3 ] # ([ 1, 2, 3 ] : List Natural) : List Natural

---

(expression
  (list_append_expression
    (list_append_expression
      (primitive_expression (expression
        (primitive_expression (list_literal))
        (type_operator)
        type: (expression
          (application_expression
            (primitive_expression (identifier (builtin)))
            (primitive_expression (identifier (builtin)))))))
      (infix_operator)
      (primitive_expression (list_literal
        (expression
          (primitive_expression (numeric_literal (natural_literal))))
        (expression
          (primitive_expression (numeric_literal (natural_literal))))
        (expression
          (primitive_expression (numeric_literal (natural_literal)))))))
    (infix_operator)
    (primitive_expression (expression
      (primitive_expression (list_literal
        (expression
          (primitive_expression (numeric_literal (natural_literal))))
        (expression
          (primitive_expression (numeric_literal (natural_literal))))
        (expression
          (primitive_expression (numeric_literal (natural_literal))))))
      (type_operator)
      type: (expression
        (application_expression
          (primitive_expression (identifier (builtin)))
          (primitive_expression (identifier (builtin))))))))
    (type_operator)
    type: (expression
      (application_expression
        (primitive_expression (identifier (builtin)))
        (primitive_expression (identifier (builtin))))))
