test/corpus/if-then-else.txt
==================
If-Then-Else statement (unit/ifThenElseA.dhall)
==================

if True then 1 else 2

---

(expression
  (if_then_else_expression
    predicate: (expression (primitive_expression (boolean_literal)))
    expression: (expression (primitive_expression
      (numeric_literal (natural_literal))))
    alternate: (expression (primitive_expression
      (numeric_literal (natural_literal))))))
